# sqrtan

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  sqrtan.c
.hidden/: Makefile.am  configure.ac  run.sh
.hidden/cmake/: CMakeLists.txt  CMakeLists0.txt  CMakeLists1.txt  CMakeLists3.txt  calc.c  calc.h  config.h.in  soma.c  sqrtan3.c  sub.c
.tools/: clear
.tools/ini_autotools/: Makefile.am  configure.ac
.tools/ini_cmake/: config.h.in
.tools/ok/: CMakeLists.txt  CMakeLists.txt0  README.md  clean_dist  sqrtan.c
.tools/src/: Makefile_2  sqrtan.c  sqrtan_2.c
autotools/: README.md  configure.ac
cmake/: CMakeLists.txt
src/: Makefile_1  config.h  sqrtan.c  sqrtan_3.c
